--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,31 +4,20 @@ project(parse_messages)
 
 find_package(PkgConfig REQUIRED)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 # Dependencies
-find_package(Boost 1.57.0 REQUIRED COMPONENTS locale)
+find_package(Boost 1.57.0 REQUIRED COMPONENTS locale filesystem system)
 pkg_check_modules(XERCES_C REQUIRED xerces-c)
-
-find_path(VSQLITEPP_INCLUDE_DIR sqlite/connection.hpp)
-
-if(NOT DEFINED VSQLITEPP_INCLUDE_DIR)
-    message(FATAL_ERROR "VSQlite++ include path not found")
-endif()
-
-find_library(VSQLITEPP_LIBRARY vsqlitepp)
-
-if(NOT DEFINED VSQLITEPP_LIBRARY)
-    message(FATAL_ERROR "VSQlite++ library not found")
-endif()
-
-message(STATUS "VSQlite++ found.")
-message(STATUS "  Include path: ${VSQLITEPP_INCLUDE_DIR}")
-message(STATUS "  Library path: ${VSQLITEPP_LIBRARY}")
+find_package(VSQLitePP)
 
 include_directories(${Boost_INCLUDE_DIRS} ${XERCES_C_INCLUDE_DIRS} ${VSQLITEPP_INCLUDE_DIR})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra")
 
-aux_source_directory(${CMAKE_SOURCE_DIR} SOURCES)
-add_executable(parse_messages ${SOURCES})
+foreach(sub_folder parse_messages db2texts)
+    aux_source_directory("${CMAKE_SOURCE_DIR}/${sub_folder}" SOURCES_${sub_folder})
+    add_executable(${sub_folder} ${SOURCES_${sub_folder}})
+endforeach(sub_folder)
 
 target_link_libraries(parse_messages ${Boost_LIBRARIES} ${XERCES_C_LIBRARIES} ${VSQLITEPP_LIBRARY})
+target_link_libraries(db2texts ${Boost_LIBRARIES} ${VSQLITEPP_LIBRARY})
