Fix the chinese filename issue in Windows
Use QString

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,15 @@ cmake_minimum_required(VERSION 3.0)
 
 project(parse_messages)
 
-find_package(PkgConfig REQUIRED)
-
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 # Dependencies
-find_package(Boost 1.57.0 REQUIRED COMPONENTS locale filesystem system)
+find_package(Boost 1.57.0 REQUIRED COMPONENTS locale)
 find_package(VSQLitePP)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Xml REQUIRED)
 
-include_directories(
-    ${Boost_INCLUDE_DIRS}
-    ${VSQLITEPP_INCLUDE_DIR}
-    ${Qt5Widgets_INCLUDE_DIRS}
-    ${Qt5Xml_INCLUDE_DIRS}
-)
+include_directories(${Boost_INCLUDE_DIRS} ${VSQLITEPP_INCLUDE_DIR} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Xml_INCLUDE_DIRS})
 
 # QT_NO_EMIT prevent Qt headers from defining emit, which is used in vsqlite++
 # FIXME: QT_NO_EMIT is undocumented
@@ -34,10 +27,5 @@ foreach(sub_folder parse_messages db2texts)
     add_executable(${sub_folder} ${SOURCES_${sub_folder}})
 endforeach(sub_folder)
 
-target_link_libraries(parse_messages
-    ${Boost_LIBRARIES}
-    ${VSQLITEPP_LIBRARY}
-    Qt5::Widgets
-    Qt5::Xml
-)
-target_link_libraries(db2texts ${Boost_LIBRARIES} ${VSQLITEPP_LIBRARY})
+target_link_libraries(parse_messages ${Boost_LIBRARIES} ${VSQLITEPP_LIBRARY} Qt5::Widgets Qt5::Xml)
+target_link_libraries(db2texts ${Boost_LIBRARIES} ${VSQLITEPP_LIBRARY} Qt5::Core)
